--- a/css/master_______-a.css
+++ b/css/master_______-a.css
@@ -1,1 +1,113 @@
-#u684-6{background-color:transparent;font-size:72px;line-height:86px;color:#FFFFFF;}#u684-4{line-height:0px;}#u684{line-height:86px;}#u684-2{font-weight:bold;line-height:86px;}#u684-3{font-size:14px;font-weight:bold;line-height:17px;}#u682,#u1250{border-style:solid;border-width:1px;border-color:#000000;background-color:#000000;}#u1251-5{background-color:transparent;text-align:center;}#u1251-2{color:#FFFFFF;}
+#u108
+{
+	background-color: #01395E;
+}
+
+#u108:hover
+{
+	background-color: #FFAF00;
+}
+
+#u157-5
+{
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	font-size: 36px;
+	color: #01395E;
+	line-height: 43px;
+}
+
+#u157-2
+{
+	color: #FFAF00;
+}
+
+#u160-4
+{
+	background-color: #FFAF00;
+	font-size: 24px;
+	text-align: left;
+	color: #000000;
+	line-height: 29px;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+}
+
+#u160-4:hover
+{
+	background-color: #FFE100;
+}
+
+#u188-4
+{
+	background-color: #FFAF00;
+	font-size: 24px;
+	text-align: left;
+	color: #000000;
+	line-height: 29px;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+}
+
+#u188-4:hover
+{
+	background-color: #FFE100;
+}
+
+#u191-4
+{
+	background-color: #FFAF00;
+	font-size: 24px;
+	text-align: left;
+	color: #000000;
+	line-height: 29px;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+}
+
+#u191-4:hover
+{
+	background-color: #FFE100;
+}
+
+#u194-4
+{
+	background-color: #FFAF00;
+	font-size: 24px;
+	text-align: left;
+	color: #000000;
+	line-height: 29px;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+}
+
+#u194-4:hover
+{
+	background-color: #FFE100;
+}
+
+#u157-5:hover,#u160-4.MuseLinkActive,#u188-4.MuseLinkActive,#u191-4.MuseLinkActive,#u194-4.MuseLinkActive
+{
+	background-color: #FD4445;
+}
+
+#u105
+{
+	background-color: #0091CF;
+}
+
+#u154-3
+{
+	background-color: transparent;
+	font-size: 36px;
+	color: #FFAF00;
+	line-height: 43px;
+}
+
+#u257-3,#u197-7
+{
+	background-color: transparent;
+}
+
+#u200
+{
+	background-color: #DBDBDB;
+}
+
