--- a/css/list01.css
+++ b/css/list01.css
@@ -1,7 +1,7 @@
-.version.index /* version checker */
+.version.list01 /* version checker */
 {
-	color: #0000EA;
-	background-color: #883E3F;
+	color: #0000E9;
+	background-color: #BB8E6B;
 }
 
 #page
@@ -202,15 +202,15 @@
 	left: 1.76%;
 }
 
-#u263-38
+#u251-17
 {
 	z-index: 39;
-	min-height: 363px;
+	min-height: 362px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: -2px;
-	width: 99.86%;
+	margin-top: -1px;
+	width: 100%;
 }
 
 #muse_css_mq,.html
