--- a/css/list03.css
+++ b/css/list03.css
@@ -1,7 +1,7 @@
-.version.index /* version checker */
+.version.list03 /* version checker */
 {
-	color: #0000EA;
-	background-color: #883E3F;
+	color: #000010;
+	background-color: #B78911;
 }
 
 #page
@@ -202,15 +202,16 @@
 	left: 1.76%;
 }
 
-#u263-38
+#u266-4
 {
 	z-index: 39;
-	min-height: 363px;
+	min-height: 362px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: -2px;
-	width: 99.86%;
+	margin-top: -1px;
+	width: 100.15%;
+	left: -0.15%;
 }
 
 #muse_css_mq,.html
