--- a/css/list04.css
+++ b/css/list04.css
@@ -1,7 +1,7 @@
-.version.index /* version checker */
+.version.list04 /* version checker */
 {
-	color: #0000EA;
-	background-color: #883E3F;
+	color: #0000E8;
+	background-color: #84AFCE;
 }
 
 #page
@@ -202,15 +202,16 @@
 	left: 1.76%;
 }
 
-#u263-38
+#u269-4
 {
 	z-index: 39;
-	min-height: 363px;
+	min-height: 362px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: -2px;
-	width: 99.86%;
+	margin-top: -1px;
+	width: 99.72%;
+	left: 0.15%;
 }
 
 #muse_css_mq,.html
